# running_cicd

./: Makefile  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: runner.py
src/config/: .env  __init__.py  db.py  logging.py  model.py
src/db/: db.sqlite  db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
